# UTF8

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE.md  README.md
docs/: encoded-bytes.md
examples/: CMakeLists.txt  main.c
include/: utf8.h
src/: CMakeLists.txt  utf8.c
tests/: CMakeLists.txt  runner.c  utf8_codepoint_decode.c  utf8_codepoint_encode.c  utf8_decode_cp.c  utf8_encode_cp.c  utf8_str_count_codepoints.c  utf8_str_validate.c  utf8_tests.c
